refactor: autofix by eslint and prettier

--- a/src/pages/member.mdx
+++ b/src/pages/member.mdx
@@ -2,16 +2,29 @@
 
 ## 顧問
 
-<table><tbody>
-<tr><td>[JF4CZJ](https://www.if.t.u-tokyo.ac.jp/)</td><td>三田 吉郎</td></tr>
-</tbody></table>
+<table>
+  <tbody>
+    <tr>
+      <td>[JF4CZJ](https://www.if.t.u-tokyo.ac.jp/)</td>
+      <td>三田 吉郎</td>
+    </tr>
+  </tbody>
+</table>
 
 ## 大学院生・研究生
 
-<table><tbody>
-<tr><td>JJ1IBY</td><td></td></tr>
-<tr><td>JJ1PID</td><td></td></tr>
-</tbody></table>
+<table>
+  <tbody>
+    <tr>
+      <td>JJ1IBY</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>JJ1PID</td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
 ほか6名
 
 ## 4年生
@@ -20,9 +33,14 @@
 
 ## 3年生
 
-<table><tbody>
-<tr><td>JK1IHN</td><td>後藤 将人</td></tr>
-</tbody></table>
+<table>
+  <tbody>
+    <tr>
+      <td>JK1IHN</td>
+      <td>後藤 将人</td>
+    </tr>
+  </tbody>
+</table>
 
 ほか2名
 
@@ -32,10 +50,18 @@
 
 ## 1年生
 
-<table><tbody>
-<tr><td>JJ1FXH</td><td></td></tr>
-<tr><td>JJ1FYD</td><td></td></tr>
-</tbody></table>
+<table>
+  <tbody>
+    <tr>
+      <td>JJ1FXH</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>JJ1FYD</td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
 
 ほか6名
 
@@ -85,4 +111,3 @@
 <tr><td>-</td><td>藤原旭宏</td></tr>
 <tr><td>JO4EFC</td></tr>
 </tbody></table>
-
