--- a/src/pages/member.mdx
+++ b/src/pages/member.mdx
@@ -1,15 +1,6 @@
 # メンバー
 
-## 顧問
 
-<table>
-  <tbody>
-    <tr>
-      <td>[JF4CZJ](https://www.if.t.u-tokyo.ac.jp/)</td>
-      <td>三田 吉郎</td>
-    </tr>
-  </tbody>
-</table>
 
 ## 大学院生・研究生
 
@@ -23,13 +14,30 @@
       <td>JJ1PID</td>
       <td></td>
     </tr>
+    <tr>
+      <td>JJ5FXL</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>JS2FVO</td>
+      <td></td>
+    </tr>
   </tbody>
 </table>
-ほか6名
+ほか4名
 
 ## 4年生
 
-ほか2名
+<table>
+  <tbody>
+    <tr>
+      <td>JS2NEG</td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
+
+ほか1名
 
 ## 3年生
 
@@ -46,7 +54,7 @@
 
 ## 2年生
 
-ほか2名
+2名
 
 ## 1年生
 
@@ -60,21 +68,35 @@
       <td>JJ1FYD</td>
       <td></td>
     </tr>
+    <tr>
+      <td>JF6CDE</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>JK1QAQ</td>
+      <td></td>
+    </tr>
   </tbody>
 </table>
 
-ほか6名
+ほか4名
 
-## 卒業生・教職員等
+## 顧問
+
+<table>
+  <tbody>
+    <tr>
+      <td>[JF4CZJ](https://www.if.t.u-tokyo.ac.jp/)</td>
+      <td>三田 吉郎</td>
+    </tr>
+  </tbody>
+</table>
+
+
+
+## 卒業生
 
 <table><tbody>
-<tr><td>JH1ACQ</td><td>佐藤 隆夫</td></tr>
-<tr><td>[JG1ILF](http://www.leopard.t.u-tokyo.ac.jp/index-j.html)</td><td>松本 潔</td></tr>
-<tr><td>JK1HHD</td><td>川井 秀夫</td></tr>
-<tr><td>JF1SXY</td><td>小方 冬樹</td></tr>
-<tr><td>7N3CNW</td><td>阿部 英二</td></tr>
-<tr><td>[JE1BQE](http://amplet.tokyo/indexja.html)</td><td>根日屋 英之</td></tr>
-
 <tr><td>JG1VFA</td><td>日野 明徳</td></tr>
 <tr><td>7L3CQP</td><td>小川 貴也</td></tr>
 <tr><td>JI5ICH</td><td>元木 啓明</td></tr>
@@ -109,5 +131,19 @@
 <tr><td>JE6MDL</td><td>友岡雅志</td></tr>
 <tr><td>-</td><td>小林和弘</td></tr>
 <tr><td>-</td><td>藤原旭宏</td></tr>
-<tr><td>JO4EFC</td></tr>
+<tr><td>JO4EFC</td><td></td></tr>
+<tr><td>JJ2ULU</td><td></td></tr>
+<tr><td>JJ1BLG</td><td></td></tr>
+<tr><td>JJ1HRD</td><td></td></tr>
+</tbody></table>
+
+## 教職員・元教職員
+
+<table><tbody>
+<tr><td>JH1ACQ</td><td>佐藤 隆夫</td></tr>
+<tr><td>[JG1ILF](http://www.leopard.t.u-tokyo.ac.jp/index-j.html)</td><td>松本 潔</td></tr>
+<tr><td>JK1HHD</td><td>川井 秀夫</td></tr>
+<tr><td>JF1SXY</td><td>小方 冬樹</td></tr>
+<tr><td>7N3CNW</td><td>阿部 英二</td></tr>
+<tr><td>[JE1BQE](http://amplet.tokyo/indexja.html)</td><td>根日屋 英之</td></tr>
 </tbody></table>
