--- a/src/pages/member.mdx
+++ b/src/pages/member.mdx
@@ -1,15 +1,13 @@
 # メンバー
 
+2023年4月現在
+
 ## 大学院生・研究生
 
 <table>
   <tbody>
     <tr>
-      <td>JJ1IBY</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>JJ1PID</td>
+      <td>JS2NEG</td>
       <td></td>
     </tr>
     <tr>
@@ -29,19 +27,6 @@
 <table>
   <tbody>
     <tr>
-      <td>JS2NEG</td>
-      <td></td>
-    </tr>
-  </tbody>
-</table>
-
-ほか1名
-
-## 3年生
-
-<table>
-  <tbody>
-    <tr>
       <td>JK1IHN</td>
       <td>後藤 将人</td>
     </tr>
@@ -50,11 +35,11 @@
 
 ほか2名
 
-## 2年生
+## 3年生
 
 2名
 
-## 1年生
+## 2年生
 
 <table>
   <tbody>
@@ -244,6 +229,14 @@
     </tr>
     <tr>
       <td>JJ1HRD</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>JJ1IBY</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>JJ1PID</td>
       <td></td>
     </tr>
   </tbody>
