--- a/src/pages/member.mdx
+++ b/src/pages/member.mdx
@@ -289,7 +289,10 @@
     </tr>
     <tr>
       <td>-</td>
-      <td>[門本 淳一郎](https://www.u-tokyo.ac.jp/focus/ja/people/k0001_03866.html)</td>
+      <td>
+        <!-- prettier-ignore -->
+        [門本 淳一郎](https://www.u-tokyo.ac.jp/focus/ja/people/k0001_03866.html)
+      </td>
     </tr>
   </tbody>
 </table>
