--- a/src/pages/blog/index.mdx
+++ b/src/pages/blog/index.mdx
@@ -1,3 +1,6 @@
 # Blog
 
 - <a href="/blog/20231210-adventar">2023-12-10 衛星通信にハマっている話</a>
+- <a href="/blog/20231213-adventar-hentenna">
+    2023-12-13 テレビ受信用ヘンテナを作った話
+  </a>
