--- a/src/pages/member.mdx
+++ b/src/pages/member.mdx
@@ -1,6 +1,6 @@
 # メンバー
 
-2023年6月現在
+2023年12月現在
 
 ## 大学院生・研究生
 
@@ -84,6 +84,15 @@
     <tr>
       <td>[JF4CZJ](https://www.if.t.u-tokyo.ac.jp/)</td>
       <td>[三田 吉郎](https://www.if.t.u-tokyo.ac.jp/)</td>
+    </tr>
+    <tr>
+      <td>-</td>
+      {/* prettier-ignore */}
+      <td>[門本 淳一郎](https://www.u-tokyo.ac.jp/focus/ja/people/k0001_03866.html)</td>
+    </tr>
+    <tr>
+      <td>[JJ7TJI](http://sendai2030.jp/)</td>
+      <td>[小田 隆史](http://sendai2030.jp/)</td>
     </tr>
   </tbody>
 </table>
@@ -286,11 +295,6 @@
     <tr>
       <td>JA4KQG</td>
       <td>落合 幸徳</td>
-    </tr>
-    <tr>
-      <td>-</td>
-      {/* prettier-ignore */}
-      <td>[門本 淳一郎](https://www.u-tokyo.ac.jp/focus/ja/people/k0001_03866.html)</td>
     </tr>
   </tbody>
 </table>
