feat: migrate pages

--- a/src/pages/socho.mdx
+++ b/src/pages/socho.mdx
@@ -1,3 +1,5 @@
+import { Image } from "astro:assets";
+
 # 総長賞受賞
 
 東京大学アマチュア無線クラブは、コンテストでの成績や無線通信普及活動などが評価され、 「[東京大学総長賞](https://www.u-tokyo.ac.jp/ja/students/events/h12.html)」（平成17年度第1回）を受賞しました。平成17年10月11日に行われた授与式の模様を一部紹介します。
