--- a/src/pages/socho/index.mdx
+++ b/src/pages/socho/index.mdx
@@ -6,17 +6,29 @@ import { Image } from "astro:assets";
 
 <br />
 
-<img src="/photo/socho1.jpg" alt="授与式の様子1" width="75%" />
+<Image
+  src={import("./_images/socho1.jpg")}
+  alt="授与式の様子1"
+  style="width: 75%;"
+/>
 小宮山総長から表彰状と記念品を頂きました。
 <br />
 
-<img src="/photo/socho2.jpg" alt="授与式の様子2" width="75%" />
+<Image
+  src={import("./_images/socho2.jpg")}
+  alt="授与式の様子2"
+  style="width: 75%;"
+/>
 短いプレゼンテーションを行いました。
 <br />
 
-<img src="/photo/socho3.jpg" alt="授与式の様子3" width="75%" />
+<Image
+  src={import("./_images/socho3.jpg")}
+  alt="授与式の様子3"
+  style="width: 75%;"
+/>
 記念撮影
 <br />
 
-<img src="/photo/socho4.jpg" alt="記念品" width="75%" />
+<Image src={import("./_images/socho4.jpg")} alt="記念品" style="width: 75%;" />
 頂いた記念品
