update univ_onair_together: add english

--- a/src/pages/univ_onair_together/202411.mdx
+++ b/src/pages/univ_onair_together/202411.mdx
@@ -50,3 +50,53 @@
 以上
 
 [過去の実施要項・規約](/univ_onair_together)
+
+## English
+
+**University Club On-Air Month**
+
+Our club is organizing the "University Club On-Air Month" with the goal of enhancing the activities of university amateur radio clubs and promoting mutual exchange among them.
+
+There is no need for participating university clubs to register or sign up. We also hope that general stations will take this opportunity to learn about the activities of university clubs through communication and kindly support them.
+
+## Details of the University Club Joint On-Air Month - Winter 2024
+
+### Event Name
+
+University Club Joint On-Air Month - Winter 2024
+
+### Organizers
+
+The University of Tokyo Amateur Radio Club - School Club On-Air Executive Committee
+
+### Purpose
+
+To enhance the activities of university amateur radio clubs and promote mutual exchange.
+To provide opportunities for new members to operate on-air.
+
+### Period
+
+From Friday, November 1, 2024, to Saturday, November 30, 2024
+
+### Eligibility
+
+- University Club Stations: Stations established at national, public, or private universities.  
+  (Alumni members are also welcome to participate, keeping in mind the objectives of the event.)
+- General Stations: All individual or club stations not affiliated with a university club.
+
+### Calling Procedure and QSO Content
+
+There are no specific requirements.
+General stations are encouraged to consider beginners and those operating for the first time during the event.
+
+### SNS Integration
+
+We encourage all participating university club stations to use the hashtag "#UniversityClubOnAirMonth" when posting on social media. Announce your upcoming operations, or share updates on your activities. General stations are also invited to use the hashtag when they hear or make contact with a university club station, which will help support the clubs’ activities.
+
+[For past posts, check here.](https://x.com/hashtag/UniversityClubOnAirMonth)
+
+### Contact
+
+The University of Tokyo Amateur Radio Club - School Club Joint On-Air Executive Committee  
+Email: zlo.utokyo@gmail.com  
+Contact: JJ1AHS Hagiwara
