--- a/src/pages/univ_onair_together/202411.mdx
+++ b/src/pages/univ_onair_together/202411.mdx
@@ -45,7 +45,7 @@
 
 東京大学アマチュア無線クラブ　学校社団一斉オンエア月間実行委員会  
 メールアドレス zlo.utokyo@gmail.com  
-担当　JJ1AHS 萩原
+担当　JJ1AHS
 
 以上
 
@@ -59,11 +59,11 @@ Our club is organizing the "University Club On-Air Month" with the goal of enhan
 
 There is no need for participating university clubs to register or sign up. We also hope that general stations will take this opportunity to learn about the activities of university clubs through communication and kindly support them.
 
-## Details of the University Club Joint On-Air Month - Winter 2024
+## Details of the University Club On-Air Month - Winter 2024
 
 ### Event Name
 
-University Club Joint On-Air Month - Winter 2024
+University Club On-Air Month - Winter 2024
 
 ### Organizers
 
@@ -97,6 +97,6 @@ We encourage all participating university club stations to use the hashtag "#Uni
 
 ### Contact
 
-The University of Tokyo Amateur Radio Club - School Club Joint On-Air Executive Committee  
+The University of Tokyo Amateur Radio Club - School Club On-Air Executive Committee  
 Email: zlo.utokyo@gmail.com  
-Contact: JJ1AHS Hagiwara
+Contact: JJ1AHS
