--- a/src/pages/member.mdx
+++ b/src/pages/member.mdx
@@ -1,6 +1,6 @@
 # メンバー
 
-2023年12月現在
+2024年10月現在
 
 ## 大学院生・研究生
 
@@ -18,6 +18,10 @@
       <td>JS2FVO</td>
       <td></td>
     </tr>
+    <tr>
+      <td>JK1IHN</td>
+      <td>後藤 将人</td>
+    </tr>
   </tbody>
 </table>
 ほか4名
@@ -27,28 +31,20 @@
 <table>
   <tbody>
     <tr>
-      <td>JK1IHN</td>
-      <td>後藤 将人</td>
+      <td>JK1WVE</td>
+      <td></td>
     </tr>
   </tbody>
 </table>
 
-ほか2名
+ほか1名
 
 ## 3年生
-
-2名
-
-## 2年生
 
 <table>
   <tbody>
     <tr>
       <td>JJ1FXH</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>JJ1FYD</td>
       <td></td>
     </tr>
     <tr>
@@ -59,15 +55,23 @@
       <td>JK1QAQ</td>
       <td></td>
     </tr>
+    <tr>
+      <td>JL1BMC</td>
+      <td></td>
+    </tr>
   </tbody>
 </table>
 
-ほか4名
+ほか3名
 
-## 1年生
+## 2年生
 
 <table>
   <tbody>
+    <tr>
+      <td>JJ1FYD</td>
+      <td></td>
+    </tr>
     <tr>
       <td>JJ1AHS</td>
       <td></td>
@@ -76,6 +80,10 @@
 </table>
 
 ほか4名
+
+## 1年生
+
+2名
 
 ## 顧問
 
