--- a/src/pages/hard_softwares.mdx
+++ b/src/pages/hard_softwares.mdx
@@ -16,6 +16,11 @@
 <strong style={{ color: "#ff0000" }}>好評発売中！</strong> [BASE](https://ja1zlo.base.shop/items/80848771)
 [BOOTH](https://ja1zlo.booth.pm/items/5301167)
 
+## ミニラジオ
+
+5cm角サイズの超小型ラジオです。AM, FM, ワイドFMに対応しており、単5電池で約12時間動作します。
+オンライン販売は現在計画中です。
+
 ## CW Freak
 
 ZLO OBの今泉さんが、「Windows NT系でも動くPCTON2をつくろうじゃないか」ということで製作したソフトです。PCTON2そのままの使用感でCW受信練習を楽しむことができます。Ver 2.0よりNetworkランキングに対応し、当部のホームページ上で[ランキング](http://ja1zlo.u-tokyo.org/cw_freak.html)をご覧になれます。
