change members' link

--- a/src/pages/member.mdx
+++ b/src/pages/member.mdx
@@ -96,7 +96,7 @@
     <tr>
       <td>-</td>
       {/* prettier-ignore */}
-      <td>[門本 淳一郎](https://www.u-tokyo.ac.jp/focus/ja/people/k0001_03866.html)</td>
+      <td>[門本 淳一郎](https://tartetrat.site)</td>
     </tr>
     <tr>
       <td>[JJ7TJI](http://sendai2030.jp/)</td>
@@ -297,8 +297,8 @@
       <td>阿部 英二</td>
     </tr>
     <tr>
-      <td>[JE1BQE](http://je1bqe.amplet.com/)</td>
-      <td>[根日屋 英之](http://je1bqe.amplet.com/)</td>
+      <td>[JE1BQE](https://je1bqe.amplet.com)</td>
+      <td>[根日屋 英之](https://je1bqe.amplet.com)</td>
     </tr>
     <tr>
       <td>JA4KQG</td>
