publish /qslpolicy page

--- a/src/pages/qslpolicy.mdx
+++ b/src/pages/qslpolicy.mdx
@@ -1,8 +1,10 @@
 # QSLカード発行ポリシーについて
 
+<div style="text-align: right;">2025/01/06 発表</div>
+
 昨今、QSLカードの電子化やJARLビューロの転送遅延などを背景に、紙カードの削減についての議論が進んでいます。当クラブでも、数年前から電子QSLの導入や、コンテストQSOの紙カードは発行しないなどの削減を進めてきました。この度、当クラブの対応を以下の通り「東京大学アマチュア無線部（JA1ZLO・JA1YWX）QSLカード発行ポリシー」として発表いたします。
 
-### 東京大学アマチュア無線部（JA1ZLO・JA1YWX）QSLカード発行ポリシー
+## 東京大学アマチュア無線部（JA1ZLO・JA1YWX）QSLカード発行ポリシー
 
 コンテスト中のQSOについては、基本的に電子QSLにて発行します。
 
