--- a/src/pages/univ_onair_together/202505.mdx
+++ b/src/pages/univ_onair_together/202505.mdx
@@ -22,7 +22,7 @@
 
 ## 呼び出し方法・交信内容
 
-特に定めない。通常の交信と同様。  
+特に定めない。通常の交信と同様とする。  
 大学社団局には、可能であれば「大学社団一斉オンエア月間」参加中であることをアナウンスすることを求める。  
 一般局には初心者や体験運用者に配慮した交信を求める。
 
