onair_together: add calendar

--- a/src/pages/univ_onair_together/202505.mdx
+++ b/src/pages/univ_onair_together/202505.mdx
@@ -33,6 +33,28 @@
 
 [過去の投稿はこちらから](https://x.com/hashtag/%E5%A4%A7%E5%AD%A6%E7%A4%BE%E5%9B%A3%E4%B8%80%E6%96%89%E3%82%AA%E3%83%B3%E3%82%A8%E3%82%A2%E6%9C%88%E9%96%93)
 
+## 運用カレンダー
+
+各社団の運用予定は、以下のカレンダーからご確認いただけます。
+
+[運用カレンダーはこちら](https://calendar.google.com/calendar/embed?src=b4da52fc07c5bda8563e886fbe4f3c95cccf4013c4e7b089505cda15fc54df97%40group.calendar.google.com&ctz=Asia%2FTokyo)
+
+<iframe
+  src="https://calendar.google.com/calendar/embed?src=b4da52fc07c5bda8563e886fbe4f3c95cccf4013c4e7b089505cda15fc54df97%40group.calendar.google.com&ctz=Asia%2FTokyo&dates=20250501/20250531&showTitle=0"
+  style="border: 0"
+  width="800"
+  height="600"
+  frameborder="0"
+  scrolling="no"
+></iframe>
+
+#### カレンダーへの登録方法（大学社団局向け）
+
+こちらのカレンダーへ運用予定をご希望の方は、以下の内容をzlo.utokyo@gmail.comまでご連絡ください。お送りいただいたmailアドレス宛に編集への招待をお送りいたします。  
+①大学名・社団名  
+②コールサイン  
+③カレンダーを編集するGoogleアカウント（gmailアドレス）
+
 ## 問い合わせ先
 
 東京大学アマチュア無線クラブ　学校社団一斉オンエア月間実行委員会  
