--- a/src/pages/univ_onair_together/index.mdx
+++ b/src/pages/univ_onair_together/index.mdx
@@ -1,4 +1,5 @@
 # 大学社団一斉オンエア月間
 
-- [2024春](/univ_onair_together/202405)
-- [2024冬](/univ_onair_together/202411)
+- [大学社団一斉オンエア月間 2024 春](/univ_onair_together/202405)
+- [大学社団一斉オンエア月間 2024 冬](/univ_onair_together/202411)
+- [大学社団一斉オンエア月間 2025 春](/univ_onair_together/202505)
