--- a/src/pages/blog/index.mdx
+++ b/src/pages/blog/index.mdx
@@ -2,3 +2,4 @@
 
 - [2023-12-10 衛星通信にハマっている話](/blog/20231210-adventar)
 - [2023-12-13 テレビ受信用ヘンテナを作った話](/blog/20231213-adventar-hentenna)
+- [2025-08-13 小笠原DXペディション 2025](/blog/20250813-ogasawara)
