ちょっと変更

--- a/src/pages/blog/20250816-ogasawara/index.mdx
+++ b/src/pages/blog/20250816-ogasawara/index.mdx
@@ -1,11 +1,9 @@
-import { Image } from "astro:assets";
-
 # 小笠原DXペディション 2025 運用予告
 
 2025年9月、東京大学アマチュア無線クラブは、小笠原諸島の父島および母島から、JA1ZLO/JD1として運用を行います。
 小笠原諸島は東京都に属していますが、DXCCでは本州などとは別のエンティティとして扱われており、JD1という特別なコールが割り当てられています。
 世界自然遺産にも登録されている小笠原諸島から、HF・144MHz・430MHzの各バンドでオンエア予定です。
-特別デザインのQSLカードも発行いたします。
+特別デザインのQSLカードも発行予定です。
 詳細は以下の通りです。
 ぜひ多くの皆様からのコールをお待ちしております。
 
@@ -19,8 +17,6 @@ import { Image } from "astro:assets";
 - HF
 - 144MHz
 - 430MHz
-
-※ 144MHz帯と430MHz帯は、ハンディ機のみで運用します。
 
 ## モード
 
