--- a/src/pages/hard_softwares.mdx
+++ b/src/pages/hard_softwares.mdx
@@ -21,6 +21,10 @@
 5cm角サイズの超小型ラジオです。AM, FM, ワイドFMに対応しており、単5電池で約12時間動作します。
 オンライン販売は現在計画中です。
 
+## Tシャツ・その他グッズ
+
+[SUZURI](https://suzuri.jp/ja1zlo/products) にて販売しています。
+
 ## CW Freak
 
 ZLO OBの今泉さんが、「Windows NT系でも動くPCTON2をつくろうじゃないか」ということで製作したソフトです。PCTON2そのままの使用感でCW受信練習を楽しむことができます。Ver 2.0よりNetworkランキングに対応し、当部のホームページ上で[ランキング](http://ja1zlo.u-tokyo.org/cw_freak.html)をご覧になれます。
