add univ qso party 2025 page

--- a/src/pages/univ_onair_together/index.mdx
+++ b/src/pages/univ_onair_together/index.mdx
@@ -3,3 +3,7 @@
 - [大学社団一斉オンエア月間 2024 春](/univ_onair_together/202405)
 - [大学社団一斉オンエア月間 2024 冬](/univ_onair_together/202411)
 - [大学社団一斉オンエア月間 2025 春](/univ_onair_together/202505)
+
+# 大学社団QSOパーティ
+
+- [第1回 大学社団QSOパーティ](/univ_onair_together/202511)
