大学者社団Qパ　規約更新
変更部分を更新しました。
どなたか確認の上承認？をお願いします。

--- a/src/pages/univ_onair_together/202511.mdx
+++ b/src/pages/univ_onair_together/202511.mdx
@@ -1,12 +1,8 @@
-import MdTable from "@/components/MdTable.astro";
-export const components = { table: MdTable };
-
 # 第1回 大学社団QSOパーティ 規約
 
 ## 主催
 
-東京大学アマチュア無線クラブ  
-学校社団一斉オンエア実行委員会
+東京大学アマチュア無線クラブ 学校社団一斉オンエア実行委員会
 
 ## 目的
 
@@ -19,7 +15,7 @@ export const components = { table: MdTable };
 ## 参加対象局
 
 - **大学社団局**：大学や高等専門学校、短期大学など高等教育機関の社団局  
-  （OB・OGは上記目的および趣旨をご理解の上ご参加ください。）
+  （基本的には学生が運用するものとし、OB・OGは上記目的および趣旨をご理解の上ご参加ください。）
 - **一般局**：大学社団局以外の個人局および社団局
 
 ## 周波数帯および電波形式
@@ -29,13 +25,12 @@ export const components = { table: MdTable };
 ## 部門
 
 - 大学社団部門  
-  ※今回、一般部門の設置はありません。
+  ※今回、一般部門の設置はありません。ログを提出いただいてもチェックログ扱いとなりますのでご了承ください。
 
 ## 呼び出し方法および交信内容
 
 特に定めない。通常の交信と同様とする。
-
-- 大学社団局は、可能であれば社団名や大学・学校名をアナウンスすること。
+- 大学社団局は、可能であれば社団名や大学,学校名をアナウンスすること。
 - 一般局は初心者に配慮した交信を行うこと。
 
 ## 得点およびマルチプライヤ
@@ -46,15 +41,17 @@ export const components = { table: MdTable };
 
 | モード                                  | 得点 |
 | :-------------------------------------- | :--: |
-| SSB, FM など電話                        |  3   |
-| CW（F2Aなどを含む）                     |  3   |
-| FT8, FT4, JT-65などWSJT系デジタルモード |  1   |
-| RTTY, SSTVなどその他のモード            |  3   |
+| 電話(SSB, FM, AMなど)                        |  3   |
+| 電信                     |  3   |
+| FT8, FT4, JT-65 |  1   |
+| その他のモード（RTTY, SSTVなど）            |  3   |
 
 - 同一日における同一バンドかつ同一モードでの同一局との交信は1回のみ得点とする。  
-  （日付・バンド・モードのいずれかが異なれば、同じ局との交信でも得点となる）  
-  例：同一局と同一バンドのFM・SSB・CW・FT8で交信した場合 → 10点。
-- 他のコンテストや特定イベント中の交信は得点対象外。
+  （日付・バンド・モードのいずれかが異なれば、同じ局との交信でも、期間中何度でも得点となる）  
+  例：同一局と同一バンドのSSB, CW, FT8, RTTYで交信した場合、10点。
+- 本コンテストを除くコンテスト及びその他特定の期間を定めて交信結果により順位付け
+や表彰などを行う行事のための交信は、得点にならない。（本コンテスト以外のコンテスト
+など（例：オール●●コンテスト, ●●QSO パーティ など）での交信は得点にならない。）
 - クロスモードでの交信は、使用モードのうち最も得点の低いものの得点とする。
 
 ### マルチプライヤ
@@ -62,8 +59,9 @@ export const components = { table: MdTable };
 得点を1点以上獲得した日を「運用日」とし、期間中の運用日数をマルチプライヤとする。
 
 ### 総得点の計算式
-
-> 総得点 ＝ 期間中の獲得ポイント合計 × マルチプライヤ(運用日数)
+<div style="text-align: center;">
+［ 期間中の獲得ポイント数の合計 ] × [ マルチプライヤ（運用日数）]
+</div>
 
 ## 書類の提出
 
@@ -75,12 +73,14 @@ export const components = { table: MdTable };
 
 1. その他のモードでのQSOは、すべてRTTYでログし提出すること。
 2. クロスモード交信は得点の低い方のモードでログし提出すること。
-3. 複数のコールサインを使用した場合は、代表コールサインにマージして提出すること。
-4. ATS-4対応ログ形式（推奨）
+3. 複数のコールサインを使用した場合は、代表とするコールサインのログにマージして提出すること。
+4. ログの形式は、ATS-4 で対応しているもののうち、以下のいずれかの形式での提出
+を推奨する。
    - ZLOXファイル（zLog）
    - ADIF
    - LG8（Ctestwin）
    - HDB（Turbo Hamlog）
+  （参考： https://allja1.org/guide ）
 5. 提出がうまくいかない場合は主催者まで連絡すること。
 
 ### 提出締め切り
@@ -89,11 +89,12 @@ export const components = { table: MdTable };
 
 ## 個人情報の取り扱い
 
-主催者は、収集した個人情報を当行事の運営および今後の行事告知のために使用する。
+主催者は、収集した個人情報について当行事の運営のために使用するほか、今後の行事
+の告知のために使用することがある。
 
 ## 賞
 
-| 部門         | 内容                                     |
+|賞          |内容                                   |
 | :----------- | :--------------------------------------- |
 | 局数賞       | 最も多くの得点を獲得した局に賞状を贈る。 |
 | 運用日数部門 | 運用日数が最も多かった局に賞状を贈る。   |
@@ -103,14 +104,18 @@ export const components = { table: MdTable };
 
 - レピータ、D-STAR、Wires-X等を使用した交信を認める。
 - Webクラスタ等の使用を認める。
-- アマチュア無線以外の手段（SNSなど）でのスケジュールQSOを認めるが、目的から逸脱しないこと。
-- 大学社団局が異なるコールサインを用いることを認めるが、同一日・同一バンド・同一モードでの重複交信は1回のみ有効。
-  同一大学社団内の異なるコールサイン同士の交信は得点にならない。
-  - 例：東京大学アマチュア無線クラブ（JA1ZLO・JA1YWX）は通算可。ただしJA1ZLOとJA1YWX間の交信は得点にならない。
-- 本規約に違反した場合、主催者が処分を決定する。
+- 運用の告知やスケジュール QSO 等、アマチュア無線以外の手段を用いて交信を設定す
+ることを認めるが、当行事の目的から大きく逸脱しないこと。
+- 大学社団局は、ポータブル表示の有無や、固定局と移動局でコールサインが異なる場合
+など、期間中に異なる２以上のコールサインの使用することを認めるが、全てのコールサイ
+ンを通じて同一日における同一バンドかつ同一モードでの同一局との交信は１回のみ得点
+とし、同一の大学社団局で使用する異なるコールサイン同士の QSO は得点に含まない。
+例） 東京大学アマチュア無線クラブの異なる２つのコールサイン（JA1ZLO と JA1YWX）
+で重複交信、得点及びマルチプライヤを通算できる。ただし、JA1ZLO と JA1YWX 間の
+交信は得点にならない。
+- 本規約への違反が認められた場合、主催者にて処分を決定する。
 
 ## 主催者連絡先
 
-東京大学アマチュア無線クラブ
-学校社団一斉オンエア実行委員会  
+東京大学アマチュア無線クラブ　学校社団一斉オンエア実行委員会  
 メールアドレス zlo.utokyo@gmail.com
